Visualization for day 24 ... not very interesting

--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-primary" onclick="execute(24, 1)">Part 1</button>
                                 <button type="button" class="btn btn-primary" onclick="execute(24, 2)">Part 2</button>
+                                <button type="button" class="btn btn-primary" onclick="visualize(24)">Visualize</button>
                             </div>
 
                             <div class="part1 d-none"><br/>Part 1: <small>?</small></div>
